--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway:wght@100&display=swap');
 body{
-    background-color: rgb(110,79,141);  
+    background-color: #2A3166;  
 }
 
 .firstline{
     margin-left: 7%;
     margin-top: 4%;
-    color: yellow;
+    /*color: yellow;*/
+    color: #CAE7DA;
     
 }
 
@@ -45,42 +46,28 @@ nav ul li {
     }
 
     .navbar a:hover {
-        background-color:yellow;
+        background-color:white;
         font-weight: bolder;
-        color: purple;
-        opacity: 0.7;
+        color: #2A3166;
+        opacity: 0.9;
         
         padding: 10px;
       }
 
-      .me img{
-          margin-left: 70%;
-          border-radius: 50%;
-          margin-top: 3%;
+      
 
-        }
 
-.quote{
-    margin-left: 7%;
-    color: rgb(233, 225, 225);
-    font-weight: lighter;
-    margin-top: -16%;
-    border: solid transparent;
-    width: 60%;
-    font-size: 40px;
-    
-}
 .coding{
     margin-left: 7%;
-    margin-top: 4%;
+    margin-top: 9%;
 }
 
 .open{
-    margin-left: 58%;
+    margin-left: 59%;
     
     border: solid transparent;
     width: 40%;
-    margin-top: -25%;
+    margin-top: -20%;
     
 }
 .open h2{
@@ -89,7 +76,8 @@ nav ul li {
     margin-left: 38%;
 }
 .open p{
-    color:yellow;
+    /*color:yellow;*/
+    color: #CAE7DA;
     font-size: 30px;
     font-weight: 400px;
     margin-left: 22%;
@@ -101,34 +89,13 @@ nav ul li {
     
 }
 
-.line1{
-margin-top: 2%;
-margin-right: 10%;
 
 
-
-}
-.line2{
-    margin-top: 2%;
-    margin-right: 10%;
    
    
-    }
-
-.line1 hr{
-        
-        border: 1px solid rgb(182, 44, 78);
-
-    }
-
-.line2 hr{
-        
-        border: 1px solid rgb(182, 44, 78);
-
-    }
 
     .One{
-        background-color: rgb(110,79,141);
+        background-color: #2A3166;
         
         
         
@@ -136,7 +103,7 @@ margin-right: 10%;
 
     .Two{
         background-color: white;
-        margin-top: 15%;
+        margin-top: 10%;
         width: 100%;
     }
 
@@ -145,23 +112,274 @@ margin-right: 10%;
     }
 
     .title h1{
-        margin-left: 7%;
+        margin-left: 84%;
         font-size: 40px;
-        color: rgb(179, 72, 99);
+        color: #EE7879;
         margin-top: -3%;
         
     }
  .box{
-     border:solid rgb(214, 214, 50)  ;
-     width: 85%;
-     margin-left: 7%;
-     margin-top: -1%;
-     background-color: rgb(110,79,141);
+   display: flex;
+   padding-bottom: 8%;
+   
+ }
+ 
+ .wattpad{
+    margin-left: 5%;
+ }
+ .java{
+   margin-left: 5%; 
  }
 
- .box p{
-     margin-left: 3%;
-     color: white;
-     font-size: 25px;
-     padding-top: 2%;
+ .python{
+    margin-left: 5%;
+
  }
+ .kotlin{
+    margin-left: 5%;
+
+ }
+ .html{
+    margin-left: 8%;
+
+ }
+
+ .html p{
+    color: rgb(42, 42, 141);
+ }
+
+ .kotlin p{
+    color: rgb(42, 42, 141);
+ }
+
+ .python p{
+    color: rgb(42, 42, 141);
+ }
+
+ .java p{
+    color: rgb(42, 42, 141);
+ }
+
+ .wattpad p{
+    color: rgb(42, 42, 141);
+ }
+
+ .three{
+    background-color: #2A3166;
+    margin-top: 15%;
+    width: 100%;
+   
+}
+
+.abby{
+    padding-top: 2%;
+}
+
+.abby h1{
+    margin-left: 7%;
+    font-size: 40px;
+    color: #EE7879;
+    margin-top: -3%;
+    
+}
+
+.abbox{
+    border: solid white;
+    background-color: white;
+    width: 84%;
+    margin-left: 7%;
+}
+
+.abbox p{
+    font-size: 30px;
+    margin-left: 8%;
+}
+
+.four{
+    background-color: #2A3166;
+    margin-top: 15%;
+    width: 100%;
+   
+}
+
+.title4{
+    padding-top: 2%;
+}
+
+
+
+
+.Four{
+    background-color: rgb(100, 72, 78);
+    width: 90%;
+    height: 100%;
+    margin-left: 5%;
+      
+}
+/* .title5{
+    margin-left: 28%;
+    margin-top: 2.7%;
+    border: solid transparent;
+    width: 40%;
+    
+} */
+
+.title5 h1{
+    margin-left: 7%;
+    font-size: 40px;
+    color: #EE7879;
+    margin-top: -10%;
+}
+.title5 p{
+    font-size: 20px;
+    color: rgb(0, 225, 255);
+    font-weight: bolder;
+    margin-left: 7%;
+    border: solid transparent;
+    width: 800px;
+    margin-top: -2%;
+    font-size: 30px;
+}
+.boxes{
+    display: flex;
+    
+    border: solid white;
+   
+    margin-top: 3%;
+    width: 89%;
+    margin-left: 5%;
+    background-color:rgb(250, 245, 246) ;
+    
+}
+
+.box1{
+    border: solid transparent;
+    width: 25%;
+    height: 300px;
+    background-color: white;
+    
+}
+
+.box2{
+    border: solid white;
+    width: 25%;
+    height: 300px;
+    background-color: palevioletred;
+}
+
+.box3{
+    border: solid transparent;
+    width: 25%;
+    height: 300px;
+    background-color: rgb(220, 238, 252);
+   
+
+}
+
+.box4{
+    border: solid transparent;
+    width: 25%;
+    height: 300px;
+    background-color: rgb(245, 205, 63);
+   
+
+}
+
+.box4 h3{
+    font-size: 15px;
+}
+
+
+.box4 h2{
+    margin-left: 8%;
+    color:azure;
+    margin-top:10%;
+   
+}
+.koty{
+    margin-left: 7%;  
+    margin-top: 10%;
+}
+.box4 h3{
+    font-size: 17px;
+    color: azure;
+}
+
+.box1 h2{
+    margin-left: 8%;
+    color:rgb(63, 20, 4);
+    margin-top: -30%;
+}
+.websites{
+    margin-left: 7%;  
+    margin-top: 10%;
+}
+.box1 h3{
+    font-size: 17px;
+}
+
+
+.box2 h2{
+    margin-left: 8%;
+    color:white;
+    margin-top: -30%;
+}
+.design{
+    margin-left: 7%;  
+    margin-top: 10%;
+}
+.box2 h3{
+    font-size: 17px;
+    color: white;
+}
+
+
+
+.box3 h2{
+    margin-left: 8%;
+    color:rgb(63, 20, 4);
+    margin-top: -30%;
+}
+.pyth{
+    margin-left: 7%;  
+    margin-top: 10%;
+}
+.box3 h3{
+    font-size: 17px;
+    color: rgb(63, 20, 4);
+}
+
+
+
+.x,.y,.z{
+    margin-top: 40%;
+}
+
+.footer{
+    background-color: beige;
+    height: 200px;
+    margin-top: 15%;
+    width: 100%;
+}
+ .address{
+    display: flex;
+    padding-top:5%;
+    
+ }
+
+ .link{
+    margin-left: 18%;
+ }
+
+ .Wattpad{
+    margin-left: 15%;
+ }
+
+ .cv{
+    margin-left: 18%;
+ }
+
+
+
+
+
