--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,32 @@ body{
     overflow-x: hidden;
 }
 
-.firstline{
-    margin-left: 7%;
-    margin-top: 4%;
-    /*color: yellow;*/
-    color: #CAE7DA;
+
     
-}
+   
+   
+    
+
 
 .navbar{
     margin-top:-3%;
+    background-color:rgb(5, 28, 58);
+    margin-top: -4.7%;
+    width: 100%;
+    height: 10%;
+    padding-top: 1%;
+   
+   
+   
     
+    
+    
+}
+
+.firstline{
+    margin-right: 81.6%;
+    margin-top: -3%;
+    color: #CAE7DA;
 }
 
 
@@ -22,7 +37,13 @@ body{
 nav{
 text-align: right;
 width: 48%;
-margin-left: 49%;
+margin-left: -0.6%;
+position: static;
+position: fixed;
+top: 9.5%;
+
+
+
 
 
 
@@ -60,7 +81,7 @@ nav ul li {
 
 .coding{
     margin-left: 7%;
-    margin-top: 9%;
+    margin-top: 15%;
 }
 
 .open{
@@ -97,6 +118,7 @@ nav ul li {
 
     .One{
         background-color: #2A3166;
+        
         
         
         
@@ -180,7 +202,7 @@ nav ul li {
     margin-left: 7%;
     font-size: 40px;
     color: #EE7879;
-    margin-top: -3%;
+    margin-top: 4%;
     
 }
 
@@ -229,7 +251,7 @@ nav ul li {
     margin-left: 7%;
     font-size: 40px;
     color: #EE7879;
-    margin-top: -10%;
+    margin-bottom: 5%;
 }
 .title5 p{
     font-size: 20px;
